# transfiguration

./: .claude.md  .gitattributes  .gitignore  ARCHIVE-LOG.md  COMPILATION_GRAPH_DB_RESEARCH.md  COUNTERARGUMENT_PERSISTENT_DB_COMPILERS.md  Cargo.toml  DOWNLOAD_REPRODUCTION_GUIDE.md  DOWNLOAD_SESSION_LOG.md  FILE-MAPPING.json  IDE_EVOLUTION_ANALYSIS.md  QUICK_REFERENCE.md  README.md  RUST_MICRO_LIBRARIES_COMPREHENSIVE_AUDIT.md  Rust-Rover-Deconstruction.md  SESSION_SUMMARY_2025-11-06.md  SETUP_COMPLETE.md  TABLE-OF-CONTENTS.md  WIP20251014p1.md  analyze_kiro.sh  batch_download_reproduction.sh  debug_ts_parser.sh  file_filter_results.json  parallel_subagent_framework_validation_report.md  refNotes.md  rust-idiomatic-patterns.md  test_configuration_analyzer.sh
.claude/: FOUR-WORD-THESIS-INTEGRATION-SUMMARY.md  S01-README-MOSTIMP.md  S02-visual-summary-terminal-guide.md  S03-four-word-naming-thesis.md  S05-tone-style-guide.md  S06-design101-tdd-architecture-principles.md  S44ReleaseCheckList.md
.domainDocs/: D01Subagents.md  D02LightweightLLMResearch.md
00-archive-management-scripts/: shorten_filename.py
A02OSSToolsPOC/dobby-subagent-code-summarizer/: .gitignore  Cargo.toml  Domain01.md  README.md  TDD_SUCCESS_SUMMARY.md  backlog.md  clippy.toml  debug_inference.rs  iggy_apache_Summary_20251024_103426.md  test_sample.rs  test_sample_Summary.md  test_sample_Summary_20251024_091209.md  test_sample_Summary_FAILED_20251025_042416.md  test_sample_Summary_FAILED_20251025_062514.md
A02OSSToolsPOC/dobby-subagent-code-summarizer/.prdArchDocs/: TDD-First-Rust-Architecture-Specification.md
A02OSSToolsPOC/dobby-subagent-code-summarizer/.steeringDocs/: dobbyPRDv1.md
A02OSSToolsPOC/dobby-subagent-code-summarizer/examples/: smol_tdd_demo.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/: errors.rs  inference.rs  lib.rs  orchestrator.rs  parallel_agents.rs  real_inference.rs  results.rs  smol_inference.rs  smol_inference_contract.rs  smol_inference_ffi.rs  smol_inference_ffi_pipeline.rs  smol_inference_ort_genai.rs  smol_production_tokenizer.rs  t5_inference_contract.rs  test_ort_api.rs  tokenizer_codet5.rs  tokenizer_simple.rs  tokenizer_smollm.rs  validation.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/chunking/: mod.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/layer1/traits/: error.rs  inference.rs  mod.rs  pipeline.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/layer1/traits/implementations/: database_simple.rs  mod.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/layer1/traits/tests/: mod.rs  test_green_phase_simple.rs  test_inference_real.rs  test_pipeline_orchestrator.rs  test_simple.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/model/: mod.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/src/session_pool/: mod.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/tests/: smol_integration_tests.rs  smol_tdd_integration_test.rs
A02OSSToolsPOC/dobby-subagent-code-summarizer/tests/fixtures/: iggy_apache.txt  test_sample_Summary.md
Insp01Kiro/: TASK_6_IMPLEMENTATION_SUMMARY.md
Insp03_ParseltongueEvolution/: A004_InterfaceContextISG.md  A005_ReasoningWithISG.md  A006_MintoPyramid_ISG_Strategy.md  README.md
Insp04_DownloadAnalysis/: COMPLETE_TOOL_INVENTORY.md  STATIC_ANALYSIS_JOURNAL.md  deb_deconstruct_and_study.sh
Insp09_ActiveWorkspaces_StrategicInitiatives/: README.md  RustHallows-part1.txt  RustIdiomsLong20251021.md
Insp10ParselTongue and Pensieve Design/: A1TUI_Code_Diff_Editor.md
Insp11MVP/: A01PyramidForMVP.md  A02ArchV1.md  A04ONNXlearning.md  A98NotesV2.md  a97HQNotesV1.md
ParselTongue and Pensieve Design/: A0System_Configuration_Detector.md
RustOptimizationOpportunities/: README.md
compilation_repos/: README.md
cross-repository-learnings/: README.md
cross-repository-research/: README.md
deconstructor/: Cargo.toml
docs/: Insp01_IDEAnalysis__.LLMNotes__DeconstructDebZero-Trust.deb Dissection_ A Rust Toolchain for Safe, Deep-Dive Package Analysis.md  Insp01_IDEAnalysis__research_data__vscode_forks__comprehensive_fork_catalog.md  Insp04_DownloadAnalysis__COMPREHENSIVE_IDE_EVOLUTION_ANALYSIS.md  Insp04_DownloadAnalysis__README.md  TABLE_OF_CONTENTS.md  file_classifications.json  transfiguration-ab20251014p1__.git__COMMIT_EDITMSG  transfiguration-ab20251014p1__.git__HEAD  transfiguration-ab20251014p1__.git__config  transfiguration-ab20251014p1__.git__objects__33__491237130a3789ac6e8345c524f41021a73d5e  transfiguration-ab20251014p1__.git__objects__8a__1b09d7b6518270a2d4e773fa20b2cafab49ecb  (+41 more)
lib/: api_surface_analyzer.sh  (+5 more)
tempPOC/: Cargo.toml  PROOF_COMPLETE_REAL_ONNX.md  README.md  simple_summarizer  simple_summarizer.rs  update01.md
tempPOC/full_tokio_run/: Cargo.toml  test_sample_Summary_20251024_091527.md
tempPOC/full_tokio_run/models/: mnist.onnx  simple_model.onnx  torch_model.onnx
tempPOC/full_tokio_run/models/codet5-onnx/: config.json  tokenizer.json  tokenizer_config.json
tempPOC/full_tokio_run/models/codet5-small/: generation_config.json
tempPOC/full_tokio_run/src/: lib.rs  orchestrator.rs  results.rs  tokenizer_codet5.rs
tempPOC/full_tokio_run/src/chunking/: mod.rs
tempPOC/full_tokio_run/src/model/: manager.rs  mod.rs
tempPOC/model_conversion/: convert_codet5.py  simple_convert.py
tempPOC/src/: chunk_generator.rs  chunker.rs  complete_onnx_provider.rs  lib.rs  main.rs  main_real_onnx.rs  model_provider.rs  orchestrator.rs  parallel_demo.rs  simple_parallel.rs  types.rs  working_parallel.rs
tempPOC/testFiles/: anthropics-claude-code-8a5edab282632443 (5).txt  anthropics-claude-code-action-8a5edab282632443.txt  anthropics-claude-code-base-action-8a5edab282632443.txt  anthropics-claude-cookbooks-8a5edab282632443.txt  anthropics-courses-8a5edab282632443.txt  anthropics-skills-8a5edab282632443.txt
tempPOC/tests/: test_parallel_onnx_proof.rs
temp_onnx_test/: .gitignore  Cargo.toml
temp_onnx_test/models/models/: config.json  generation_config.json
temp_onnx_test/src/: main.rs  real_onnx_inference.rs  real_onnx_test.rs  simple_real_onnx.rs  tokio_performance_test.rs  tokio_test.rs
(+681 files in other folders)
