[package]
name = "tempPOC"
version = "0.1.0"
edition = "2021"
description = "Real ONNX LLM inference for Tokio code summarization"

[dependencies]
# ONNX Runtime for ML inference
ort = "2.0.0-rc.4"

# Utilities
anyhow = "1.0"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "simple_summarizer"
path = "simple_summarizer.rs"

# [[bench]]
# name = "parallel_processing"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true