[package]
name = "dobby-subagent-code-summarizer"
version = "0.1.0"
edition = "2021"
description = "Real ONNX LLM inference for Tokio code summarization"

[dependencies]
# ONNX Runtime 2.0 for ML inference
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "half"] }
ndarray = "0.15"
anyhow = "1.0"

# Tokenization
tokenizers = "0.19"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"

# Serialization for config parsing
serde = { workspace = true }
serde_json = { workspace = true }

# Tokenization
# tokenizers = { workspace = true } # Using direct dependency above

# System metrics
sysinfo = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Date/time for file naming
chrono = { workspace = true }

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
# bindgen = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bin]]
name = "code_summarizer"
path = "src/bin/code_summarizer.rs"

[[bin]]
name = "test_ort_api"
path = "src/test_ort_api.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true